src/assets/stylus/views/main-landing.styl
header-height = 800px;

#main-landing {

    .header-container {
        height: header-height;

        .header {
            position: absolute;

            top: 64px;
            left: 0;
            right: 0;

            width: 100%;
            height: header-height;

            display: table;

            -webkit-background-size: cover;
            -moz-background-size: cover;
            background-size: cover;

            .text-vertical-center {
                display: table-cell;
                text-align: center;
                vertical-align: middle;

                h1 {
                    font-size: 120px;
                }

                h1, h3 {
                    color: white;

                    text-shadow: -1px -1px 0 #000,
                    1px -1px 0 #000,
                    -1px 1px 0 #000,
                    1px 1px 0 #000;
                }
            }
        }
    }

    .start-item {
        text-align: center;
    }

    #start {
        margin-top: 50px;
        margin-bottom: 100px;

        .fa {
            color: #77BEF5 + 30%;
        }

        .fa-circle {
            color: #098BEF;
        }
    }

}

